# TICO

./: 2.7.0  README.md  llama_ppl_compare.py  pyproject.toml  quantize_attn.py  quantize_mlp.py  setup.py  test_depthwise_quantization.py  test_fpi_quantization_on_models.py  test_tconv_GPTQ.py  test_version_cheeck.py  trn_TCONV_to_CONV1d.py  trn_TCONV_to_CONV2d.py
.github/workflows/: check-pr.yaml  check-uv.yaml  publish-nightly-package.yaml  publish-official-package.yaml
assets/: SpinQuant Llama 3.2 (standalone).html  SpinQuant Qwen3-VL (standalone).html
docs/: design.md  development.md  getting_started.md  requirements.md  system_test.md
infra/dependency/: torch_dev.txt  torchvision_dev.txt
infra/scripts/: build.sh  install.sh  install_requirements_2_5.txt  install_requirements_2_6.txt  install_requirements_dev.txt  test_configure.sh  test_run.py
infra/style/: format.sh
test/: requirements_2_5.txt  requirements_2_6.txt  requirements_dev.txt
test/pt2_to_circle_test/: __init__.py  builder.py  test_dyn_op.py  test_model.py  test_pt2_to_circle.py
test/utils/: base_builders.py
tico/: __init__.py
tico/config/: v1.py
tico/passes/: cast_clamp_mixed_type_args.py  cast_mixed_type_args.py  convert_conv2d_to_linear.py  convert_conv3d_to_conv2d.py  convert_conv_to_conv_transpose2d.py  convert_expand_to_slice_cat.py  convert_gather_to_gather_nd.py  convert_permute_to_reshape.py  convert_to_relu6.py  decompose_fake_quantize.py  decompose_fake_quantize_tensor_qparams.py  decompose_group_norm.py  eliminate_rank_round_trip_region.py  fuse_leading_unsqueeze_reshape.py  (+13 more)
(+517 files in other folders)
